2008-11-13  Ronaldo Maia  <romaia@async.com.br>

	reviewed by: Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/entry.py:
	* kiwi/ui/entrycompletion.py:
	When the value of the ComboEntry changes, the object is not updated
	sometimes. Fixes Bug 3673

2008-11-07  Ronaldo Maia  <romaia@async.com.br>

	reviewed by: Johan Dahlin  <jdahlin@async.com.br>

	* examples/awesomecombo.py:
	* kiwi/ui/cellrenderer.py:
	* kiwi/ui/comboentry.py:
	Enable multi-line ComboEntry options, similar to firefox's toolbar.
	Fixes 3843.

2008-11-03  Ronaldo Maia  <romaia@async.com.br>

	* kiwi/ui/comboentry.py: Keep the toggle button the same size as the
							 entry and position the popup correctly. Fixes
							 3841

2008-10-28  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/builderloader.py:
	* kiwi/ui/views.py:
	Add initial support for loading GtkBuilder files

=== 1.9.23 ===
2008-09-10 George Y. Kussumoto <george@async.com.br>

	Release 1.9.23

2008-07-14  George Y. Kussumoto  <george@async.com.br>

	reviewed by: Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/objectlist.py: ColoredColumn - data_func should receive the model
							 object instead of the attribute value.

2008-07-11  Ronaldo Maia  <romaia@async.com.br>

	reviewed by: Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/objectlist.py: Enable more than one color on a ColoredColumn

2008-06-23  Ronaldo Maia  <romaia@async.com.br>

	reviewed by: Christian Reis  <kiko@async.com.br>

	* kiwi/ui/views.py:
	Allow user to specify the widget directly when attaching a slave.

2008-06-05  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/datatypes.py:
	Make Mr Buildbot a happy camper

2008-06-05  Johan Dahlin  <jdahlin@async.com.br>

	* glade3-plugin/kiwiwidgets.py:
	* glade3-plugin/kiwiwidgets.xml:
	* glade3-plugin/setup.py:
	Update the glade3 plugin to Juan's latest revival
	of catalog support in glade3

2008-06-05  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/gazpacholoader.py:
	Remove duplicate converters
