@@ -127,8 +127,8 @@ class currency(Decimal):
                 if frac_digits == 127:
                     frac_digits = 2
 
-            format = '%%.%sf' % frac_digits
-            dec_part = (format % value)[-frac_digits:]
+            format = '%%.%sf' % (frac_digits+1)
+            dec_part = (format % value)[-(frac_digits+1):-1]
 
             mon_decimal_point = conv.get('mon_decimal_point', '.')
             currency += mon_decimal_point + dec_part
